# idea-bag-solutions

./: .gitignore  README.md  __init__.py  requirements.txt
Text/MorseCodeMaker/: morse_code_maker.py
Text/rss-creator/: rss_channel.py  rss_creator.py
cities_distance/: distance_between_two_cities.py
common/: LICENSE  README.md  __init__.py  menu.py  program_menu.py  pyproject.toml
main/: setup.py
main/common/: README.md  logging_helper.py  program_menu.py  pyproject.toml  sqlite_handler.py
main/google_companies/: companies.py  find_rejected.py  order_found_companies.py
main/numbers/coin_flip/: simulation.py
main/text/half_string/: half_string.py
main/text/morse_code_maker/: README.md
main/text/palindrome_checker/: palindrome_checker.py
main/text/reverse_word/: reverse_word_program.py
main/text/simple_problems/: simple_problems.py
main/unrelated/dependency_graph/: dependency_graph.py  example_big.in
main/unrelated/hackerearth/: permutation_swap_sol.py
numbers/factorial/: combination_permutations.py  factorial_finder.py
numbers/happy_numbers/: solution.py
numbers/pi/: pi_to_nearest_nth.py
tests/common/: test_sqlite_handler.py
text/half_string/: half_string.py
text/morse_code_maker/: morse_code_maker.py
text/palindrome_checker/: palindrome_checker.py
text/rss-creator/: rss_item.py
text/simple_problems/: simple_problems.py
text/word_counter/: word_counter.py
unrelated/HackerRank/: lexicographical_order.py
unrelated/Java/: Solution.java
unrelated/hackerearth/: largest_number_sol.py  solution.py
vat/: vat_calculator.py
(+25 files in other folders)
