[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commons-benatt"
version = "0.0.1"
authors = [
  { name="benatt", email="mathubenard@gmail.com" },
]
description = "A simple package that consists of modules i might need to reuse."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ben-mathu/idea-bag-solutions/tree/master/common"
Issues = "https://github.com/ben-mathu/idea-bag-solutions/issues"